--- a/popup/homepage_cleaner.html
+++ b/popup/homepage_cleaner.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="popup-container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur necessitatibus magni eum reiciendis earum natus ipsa, laborum consectetur aliquam animi, doloremque illo dolorem quo officia! Magnam neque mollitia culpa eius.</p>
+        <button>TEST BUTN</button>
         <label class="switch">
             <p>TEST:</p>
             <input type="checkbox">
