--- a/options/options.html
+++ b/options/options.html
@@ -2,21 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Roblox Homepage Cleaner Options</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur necessitatibus magni eum reiciendis earum natus ipsa, laborum consectetur aliquam animi, doloremque illo dolorem quo officia! Magnam neque mollitia culpa eius.</p>
+        <h1>Roblox Homepage Cleaner Options</h1>
+        <p>Make sure to reload the roblox homepage for the settings to take place!</p>
+        <p>Remove hightlights panel: </p>
         <label class="switch">
-            <p>Remove hightlights panel: </p>
             <input type="checkbox" id="remove-highlights">
+            <span class="slider"></span>
         </label>
+        <p>Remove recommendations panel: </p>
         <label class="switch">
-            <p>Remove recommendations panel: </p>
             <input type="checkbox" id="remove-recommended">
+            <span class="slider"></span>
         </label>
-        <br>
+        <br><br>
         <button type="submit">Save</button>
     </form>
+    <p>Thank you for trying this extension!</p>
+    <hr>
+    <p>-this extension was created by <a href="https://github.com/shadow-crafter" target="_blank">shadowcrafter</a>-</p>
     <script src="options.js"></script>
 </body>
 </html>
