Reformat things, remove magic variables in main script

--- a/options/options.html
+++ b/options/options.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roblox Homepage Cleaner Options</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <form id="options-form">
-        <h1>Roblox Homepage Cleaner Options</h1>
-        <p class="info-paragraph">Make sure to reload the roblox homepage for the settings to take place!</p>
-        <br>
-        <p>Remove hightlights panel: </p>
-        <label class="switch">
-            <input type="checkbox" id="remove-highlights">
-            <span class="slider"></span>
-        </label>
-        <p>Remove recommendations panel: </p>
-        <label class="switch">
-            <input type="checkbox" id="remove-recommended">
-            <span class="slider"></span>
-        </label>
-        <br><br>
-        <button type="submit">Save</button>
+      <h1>Roblox Homepage Cleaner Options</h1>
+      <p class="info-paragraph">
+        Make sure to reload the roblox homepage for the settings to take place!
+      </p>
+      <br />
+      <p>Remove hightlights panel:</p>
+      <label class="switch">
+        <input type="checkbox" id="remove-highlights" />
+        <span class="slider"></span>
+      </label>
+      <p>Remove recommendations panel:</p>
+      <label class="switch">
+        <input type="checkbox" id="remove-recommended" />
+        <span class="slider"></span>
+      </label>
+      <br /><br />
+      <button type="submit">Save</button>
     </form>
     <div id="extra-info">
-        <p>
-        Note: This extension is not affiliated with Roblox in any way.<br>
-        Thank you for trying this extension!<br><br>
-        -this extension was created by <a href="https://github.com/shadow-crafter" target="_blank">shadowcrafter</a>-<br>
-        </p>
+      <p>
+        Note: This extension is not affiliated with Roblox in any way.<br />
+        Thank you for trying this extension!<br /><br />
+        -this extension was created by
+        <a href="https://github.com/shadow-crafter" target="_blank"
+          >shadowcrafter</a
+        >-<br />
+      </p>
     </div>
     <script src="options.js"></script>
-</body>
+  </body>
 </html>
