--- a/options/options.html
+++ b/options/options.html
@@ -36,6 +36,7 @@
         >-<br />
       </p>
     </div>
+    <script src="../storage-handler.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
