Add options to be able to remove continue, favorites, and friends sections

--- a/options/options.html
+++ b/options/options.html
@@ -23,6 +23,21 @@
         <input type="checkbox" id="remove-recommended" />
         <span class="slider"></span>
       </label>
+      <p>Remove continue section:</p>
+      <label class="switch">
+        <input type="checkbox" id="remove-continue" />
+        <span class="slider"></span>
+      </label>
+      <p>Remove favorites section:</p>
+      <label class="switch">
+        <input type="checkbox" id="remove-favorites" />
+        <span class="slider"></span>
+      </label>
+      <p>Remove friends/connections panel:</p>
+      <label class="switch">
+        <input type="checkbox" id="remove-friends" />
+        <span class="slider"></span>
+      </label>
       <br /><br />
       <button type="submit">Save</button>
     </form>
