Add hearts to options credit

--- a/options/options.html
+++ b/options/options.html
@@ -45,10 +45,11 @@
       <p>
         Note: This extension is not affiliated with Roblox in any way.<br />
         Thank you for trying this extension!<br /><br />
-        -this extension was created by
+        ~💖 this extension was created by
         <a href="https://github.com/shadow-crafter" target="_blank"
           >shadowcrafter</a
-        >-<br />
+        >
+        💖~<br />
       </p>
     </div>
     <script src="../storage-handler.js"></script>
