--- a/src/options/options.html
+++ b/src/options/options.html
@@ -52,7 +52,7 @@
         💖~<br />
       </p>
     </div>
-    <script src="../storage-handler.js"></script>
+    <script src="../modules/storage-handler.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
