Add option to turn pinned section on/off

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -38,6 +38,11 @@
         <input type="checkbox" id="remove-friends" />
         <span class="slider"></span>
       </label>
+      <p>Show pinned section:</p>
+      <label class="switch">
+        <input type="checkbox" id="show-pinned" />
+        <span class="slider"></span>
+      </label>
       <br /><br />
       <button type="submit">Save</button>
     </form>
