Add inputs and saving for place IDS

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -43,6 +43,21 @@
         <input type="checkbox" id="show-pinned" />
         <span class="slider"></span>
       </label>
+      <p>Pinned games:</p>
+      <div id="pinned-games">
+        <input type="text" placeholder="game's place id" />
+        <input type="text" placeholder="game's place id" />
+        <input type="text" placeholder="game's place id" />
+        <input type="text" placeholder="game's place id" />
+      </div>
+      <p>
+        Don't know how to find the place id for a game? check
+        <a
+          href="https://devforum.roblox.com/t/how-to-find-the-placeid-on-roblox/869711"
+          target="_blank"
+          >here</a
+        >.
+      </p>
       <br /><br />
       <button type="submit">Save</button>
     </form>
